name:                orgmode-sql
version:             0.1.0
license:             BSD3
license-file:        LICENSE
author:              Richard Zetterberg
maintainer:          richard.zetterberg@googlemail.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10
synopsis:            Library for creating SQL databases from org-mode data
description:
  <<https://travis-ci.org/rzetterberg/orgmode-sql.svg?branch=master>>
  .
  `orgmode-sql` is a library that convert org-mode data parsed with
  orgmode-parse into SQL databases using persistent.

library
  hs-source-dirs: lib

  exposed-modules: Database.OrgMode
                 , Database.OrgMode.Render.OrgModeText
                 , Database.OrgMode.Export
                 , Database.OrgMode.Import
                 , Database.OrgMode.Internal.Import
                 , Database.OrgMode.Internal.PersistDerive
                 , Database.OrgMode.Types
                 , Database.OrgMode.Util.Time
                 , Database.OrgMode.Query.Clock
                 , Database.OrgMode.Query.ClockTable
                 , Database.OrgMode.Query.Document
                 , Database.OrgMode.Query.Heading
                 , Database.OrgMode.Query.Planning
                 , Database.OrgMode.Query.Property
                 , Database.OrgMode.Query.Tag
                 , Database.OrgMode.Query.TagRel

  ghc-options:
        -Wall

  default-extensions: CPP
                      DeriveDataTypeable
                      DeriveGeneric
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      NoImplicitPrelude
                      NoMonomorphismRestriction
                      OverloadedStrings
                      QuasiQuotes
                      Rank2Types
                      RecordWildCards
                      ScopedTypeVariables
                      TemplateHaskell
                      TupleSections
                      TypeFamilies
                      ViewPatterns

  build-depends: aeson                   >= 0.8
               , attoparsec              >= 0.12
               , base                    >= 4.4 && < 5.0
               , esqueleto               >= 2.4
               , mtl                     >= 2.2
               , orgmode-parse           >= 0.1
               , persistent              >= 2.2
               , persistent-template     >= 2.1
               , resourcet               >= 1.1
               , text                    >= 1.2
               , text-format             >= 0.3
               , time
               , transformers
               , unordered-containers    >= 0.2
               , data-default

  default-language:    Haskell2010

executable orgmode-sql-demo
  main-is:        Main.hs
  hs-source-dirs: executable

  ghc-options:
        -Wall

  build-depends: base                    >= 4.4  && < 5.0
               , orgmode-sql
               , persistent              >= 2.2
               , persistent-sqlite       >= 2.2
               , persistent-template     >= 2.1
               , text                    >= 1.2
               , transformers

  default-language:    Haskell2010

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test

  ghc-options:
        -Wall

  default-extensions: FlexibleContexts
                      OverloadedStrings
                      Rank2Types
                      KindSignatures

  build-depends: attoparsec              >= 0.12
               , base                    >= 4.4  && < 5.0
               , directory
               , hspec                   >= 2.1
               , monad-control           >= 1.0
               , monad-logger            >= 0.3
               , mtl                     >= 2.2
               , orgmode-parse           >= 0.1
               , orgmode-sql
               , persistent              >= 2.2
               , persistent-sqlite       >= 2.2
               , persistent-template     >= 2.1
               , resourcet               >= 1.1
               , text                    >= 1.2
               , time
               , transformers
               , unordered-containers    >= 0.2
               , data-default

  default-language:    Haskell2010

benchmark bench
    type:              exitcode-stdio-1.0
    main-is:           Bench.hs
    hs-source-dirs:    bench

    ghc-options:       -Wall

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
                        FlexibleContexts
                        OverloadedStrings
                        Rank2Types
                        KindSignatures

    build-depends: aeson
                 , abstract-par            >= 0.3
                 , attoparsec              >= 0.12
                 , base                    >= 4.4  && < 5.0
                 , criterion               >= 1.1
                 , directory
                 , monad-control           >= 1.0
                 , monad-logger            >= 0.3
                 , mtl                     >= 2.2
                 , orgmode-parse           >= 0.1
                 , orgmode-sql
                 , persistent              >= 2.2
                 , persistent-sqlite       >= 2.2
                 , persistent-template     >= 2.1
                 , resourcet               >= 1.1
                 , text                    >= 1.2
                 , time
                 , transformers
                 , unordered-containers    >= 0.2
                 , data-default

  default-language: Haskell2010

source-repository head
  type:                 git
  location:             https://github.com/rzetterberg/orgmode-sql
